--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@
          </nav>
 
          <main>
-                <div id="content">
+                <div class="content">
                     <h4>A short introduction</h4>
                     <p>
                         Originally a teacher for Latin and French, I decided to not stop at that but continue learning in different fields and working as a class teacher at an elementary school and then a progressive education secondary school for putting greater focus on pupil’s individual needs.  
