--- a/about.html
+++ b/about.html
@@ -42,17 +42,39 @@
          </nav>
 
          <main>
-            <article class="content">
-                <h4>A short introduction</h4>
-                <p>
-                    Originally a teacher for Latin and French, I decided to not stop at that but continue learning in different fields and working as a class teacher at an elementary school and then a progressive education secondary school for putting greater focus on pupil’s individual needs.  
-                </br>
-                </br>
-                    I developed a deeper interest in programming while participating in a workshop on becoming an IT teacher. Afterwards I continued expanding my knowledge by attending the two day workshop <em>New Devs on the block</em> at Zollhof as well as the <em>ngGirls workshop</em> and <em>NG-DE Angular conference</em> in Berlin.
-                </br>  
-                    Right now I am looking into the area of web developing using HTML, CSS and Javascript.
-                </p>    
-            </article>
+            <div class="parent">   
+ <!--               <section id="info" class="content">
+                    <h4>General Information</h4>
+                    <table>
+                        <tr><td>Name</td><th>Susanne Müller</th> </tr>
+                        <tr><td>Location</td><th>Nuremberg </th></tr>
+                    </table>
+                    </br>   
+                    <table>
+                        <tr><td>Email</td><th>mueller_susanne@icloud.com</th></tr>
+                        <tr><td>Linkedin</td><th>/in/mueller-susanne</th></tr>
+                        <tr><td>Twitter</td><th>@susiverse</th></tr>
+                        
+                    </table>
+                </section>
+--> 
+
+                <article id="intro" class="content">
+                    <h4>A short introduction</h4>
+                    <p>
+                        Originally a teacher for Latin and French, I decided to not stop at that but continue learning in different fields and working as a class teacher at an elementary school and then a progressive education secondary school for putting greater focus on pupil’s individual needs.  
+                    </br>
+                    </br>
+                        I developed a deeper interest in programming while participating in a workshop on becoming an IT teacher. Afterwards I continued expanding my knowledge by attending the two day workshop <em>New Devs on the block</em> at Zollhof as well as the <em>ngGirls workshop</em> and <em>NG-DE Angular conference</em> in Berlin.
+                    </br>  
+                        Right now I am looking into the area of web developing using HTML, CSS and Javascript.
+                    </p>    
+                </article>
+
+                <div id="empty">
+
+                </div>
+            </div> 
          </main>
     </body>
 </html>
