--- a/index.html
+++ b/index.html
@@ -42,7 +42,12 @@
         </nav>
 
         <main>
-           
+            <article class="content">
+                <p class="dat">Pappenheim, 13/12/2019</p>
+                <h4>Trip to Pappenheim</h2>
+                <p>We are on a one week school trip to Pappenheim, a small town with an old castle in the far south of Nuremberg. We enjoyed ourselves a lot, even did a night hike under a full moon with only small candles in hand and of course a little ghost story had to be told.
+                </p>
+            </article>
             <article class="content">
                 <p class="dat">Nuremberg, 24/10/2019</p>
                 <h4>One week trip to Helsinki, Finland</h2>
