--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
         <main>
             <article class="content">
                 <p class="dat">Pappenheim, 13/12/2019</p>
-                <h4>Trip to Pappenheim</h2>
-                <p>We are on a one week school trip to Pappenheim, a small town with an old castle in the far south of Nuremberg. We enjoyed ourselves a lot, even did a night hike under a full moon with only small candles in hand and of course a little ghost story had to be told.
+                <h4>School trip to Pappenheim</h2>
+                <p>It is the last day of our school trip. For a week we stayed in Pappenheim, a small town with an old castle in the far south of Nuremberg. We enjoyed ourselves a lot, even did a night hike under a full moon with only small candles in hand and of course a little ghost story had to be told.
                 </p>
             </article>
             <article class="content">
