--- a/material.html
+++ b/material.html
@@ -40,5 +40,14 @@
                  </a>   
              </div> 
          </nav>
+         <main>
+             <section>
+                 <h2>Geschichte und Politik</h2>
+                 
+                 <h2>Naturwissenschaften</h2>
+
+                 <h2>Wirtschaft</h2>
+             </section>
+         </main>
     </body>
 </html>
