--- a/index.html
+++ b/index.html
@@ -43,6 +43,11 @@
 
         <main>
             <article class="content">
+                <p class="dat">Samerberg, 15/12/2019</p>
+                <h4>Visit to an old friend</h4>
+                <p> At the weekend, I went to a small village near Rosenheim, in the Alpes, to visit a friend from university. Saturday evening, we went to  a beautiful christmas market in the forrests and enjoyed the cosy atmosphere. This morning, before going home, we had a bavarian breakfast. </p>
+            </article>
+            <article class="content">
                 <p class="dat">Pappenheim, 13/12/2019</p>
                 <h4>School trip to Pappenheim</h4>
                 <p>It is the last day of our school trip. For a week we stayed in Pappenheim, a small town with an old castle in the far south of Nuremberg. We enjoyed ourselves a lot, even did a night hike under a full moon with only small candles in hand and of course a little ghost story had to be told.
