--- a/material.html
+++ b/material.html
@@ -50,7 +50,7 @@
                     <h5>Weimarer Republik</h5>
                     <h5>NS-Zeit</h5>
                     <h5>2. Weltkrieg</h5>
-                    <div class="bottom">
+                    <div>
                         <h5>weiterführende Links</h5>
                     </div>
                 </div>
@@ -73,7 +73,7 @@
                     <h5></h5>
                     <h5></h5>
                     <h5></h5>
-                    <div class="bottom">
+                    <div>
                         <h5>weiterführende Links</h5>
                     </div>
                 </div>
